[workspace.package]
authors = ["Quantus Network Developers <hello@quantus.com>"]
edition = "2021"
homepage = "https://quantus.com/"
license = "MIT-0"
repository = "https://github.com/quantus-network/chain#"

[workspace]
members = [
	"client/cli",
	"client/consensus/qpow",
	"client/network",
	"miner-api",
	"node",
	"pallets/mining-rewards",
	"pallets/multisig",
	"pallets/qpow",
	"pallets/reversible-transfers",
	"pallets/scheduler",
	"pallets/treasury",
	"pallets/wormhole",
	"primitives/consensus/pow",
	"primitives/consensus/qpow",
	"primitives/dilithium-crypto",
	"primitives/header",
	"primitives/scheduler",
	"primitives/state-machine",
	"primitives/trie",
	"primitives/wormhole",
	"qpow-math",
	"runtime",
]
resolver = "2"

[workspace.lints.clippy]
# Deny unwrap and panic in production code (runtime & pallets)
# Test code can opt-out using: #![allow(clippy::unwrap_used, clippy::panic)]
panic = "deny"
unwrap_used = "deny"
# Also deny expect_used for consistency
expect_used = "deny"

[workspace.dependencies]
# Miscellaneous
ahash = { version = "0.8.2" }
arbitrary = { version = "1.3.2" }
array-bytes = { version = "6.2.2", default-features = false }
assert_matches = { version = "1.5.0" }
async-channel = { version = "1.8.0" }
async-trait = { version = "0.1.85", default-features = false }
asynchronous-codec = { version = "0.6" }
binary-merkle-tree = { version = "16.1.0", default-features = false }
bip39 = { version = "2.0.1", features = ["rand"], default-features = true, package = "parity-bip39" }
bytes = { version = "1.4.0", default-features = false }
chrono = { version = "0.4.31" }
cid = { version = "0.9.0" }
clap = { version = "4.5.13" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
criterion = { version = "0.5.1", default-features = false }
docify = { version = "0.2.9", default-features = false }
either = { version = "1.8.1", default-features = false }
env_logger = "0.11.5"
fdlimit = { version = "0.3.0" }
fnv = { version = "1.0.6" }
foldhash = { version = "0.1.5", default-features = false }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
hash-db = { version = "0.16.0", default-features = false }
hashbrown = "0.15.3"
hex = { version = "0.4.3", default-features = false }
ip_network = { version = "0.4.1" }
itertools = { version = "0.11" }
jsonrpsee = { version = "0.24.3" }
lazy_static = { version = "1.5.0", default-features = false, features = [
	"spin_no_std",
] }
libp2p = { version = "0.54.1" }
libp2p-identity = { git = "https://github.com/Quantus-Network/qp-libp2p-identity", tag = "v0.2.11_patch_qp_rusty_crystals_dilithium_2_1" }
linked_hash_set = { version = "0.1.4" }
log = { version = "0.4.22", default-features = false }
memory-db = { version = "0.34.0", default-features = false }
mockall = { version = "0.13.1" }
multistream-select = { version = "0.13.0" }
names = { version = "0.14.0", default-features = false }
nohash-hasher = { version = "0.2.0" }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
once_cell = { version = "1.21.3" }
p3-field = { version = "0.3.0" }
p3-goldilocks = { version = "0.3.0" }
parking_lot = { version = "0.12.1", default-features = false }
partial_sort = { version = "0.2.0" }
paste = { version = "1.0.15", default-features = false }
pin-project = { version = "1.1.3" }
pretty_assertions = { version = "1.3.0" }
primitive-types = { version = "0.13.1", default-features = false }
prometheus = { version = "0.13.4", default-features = false }
prost = { version = "0.12.4" }
prost-build = { version = "0.13.2" }
rand = { version = "0.8.5", default-features = false }
regex = { version = "1.10.2" }
reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
rpassword = { version = "7.0.0" }
sc-client-db = { version = "0.51.0", default-features = false }
sc-keystore = { version = "39.0.0", default-features = true }
sc-mixnet = { version = "0.25.0", default-features = true }
sc-tracing = { version = "44.0.0" }
scale-info = { version = "2.11.1", default-features = false }
schnellru = { version = "0.2.3" }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
sp-keystore = { version = "0.45.0", default-features = true }
tempfile = { version = "3.8.1" }
thiserror = { version = "1.0.64" }
tokio = { version = "1.45.0", default-features = false }
tokio-stream = { version = "0.1.14" }
tokio-test = { version = "0.4.4" }
tokio-util = { version = "0.7.13", default-features = false }
tracing = { version = "0.1.37", default-features = false }
trie-bench = { version = "0.42.0" }
trie-db = { version = "0.30.0", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
trie-standardmap = { version = "0.16.0" }
unsigned-varint = { version = "0.7.2" }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
void = { version = "1.0.2" }
wasm-timer = { version = "0.2.5" }
zeroize = { version = "1.7.0", default-features = false }

# Own dependencies
pallet-balances = { version = "46.0.0", default-features = false }
pallet-mining-rewards = { path = "./pallets/mining-rewards", default-features = false }
pallet-multisig = { path = "./pallets/multisig", default-features = false }
pallet-qpow = { path = "./pallets/qpow", default-features = false }
pallet-reversible-transfers = { path = "./pallets/reversible-transfers", default-features = false }
pallet-scheduler = { path = "./pallets/scheduler", default-features = false }
pallet-wormhole = { path = "./pallets/wormhole", default-features = false }
qp-dilithium-crypto = { path = "./primitives/dilithium-crypto", version = "0.2.2", default-features = false }
qp-header = { path = "./primitives/header", default-features = false }
qp-scheduler = { path = "./primitives/scheduler", default-features = false }
qp-wormhole = { path = "./primitives/wormhole", default-features = false }
qpow-math = { path = "./qpow-math", default-features = false }
quantus-miner-api = { path = "./miner-api", version = "0.0.3", default-features = false }
quantus-runtime = { path = "./runtime", default-features = false }
sc-consensus-qpow = { path = "./client/consensus/qpow", default-features = false }
sp-consensus-pow = { path = "./primitives/consensus/pow", default-features = false }
sp-consensus-qpow = { path = "./primitives/consensus/qpow", default-features = false }

# Quantus network dependencies
qp-plonky2 = { version = "1.1.3", default-features = false }
qp-poseidon = { version = "1.1.0", default-features = false }
qp-poseidon-core = { version = "1.1.0", package = "qp-poseidon-core", default-features = false, features = [
	"p2",
	"p3",
] }
qp-rusty-crystals-dilithium = { version = "2.1.0", default-features = false }
qp-rusty-crystals-hdwallet = { version = "2.0.0" }
qp-wormhole-circuit = { version = "1.0.7", default-features = false }
qp-wormhole-circuit-builder = { version = "1.0.7", default-features = false }
qp-wormhole-prover = { version = "1.0.7", default-features = false }
qp-wormhole-verifier = { version = "1.0.7", default-features = false }
qp-zk-circuits-common = { version = "1.0.7", default-features = false }

# polkadot-sdk dependencies
frame-benchmarking = { version = "45.0.3", default-features = false }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-executive = { version = "45.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-support = { version = "45.1.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-assets = { version = "48.1.0", default-features = false }
pallet-assets-holder = { version = "0.8.0", default-features = false }
pallet-conviction-voting = { version = "45.0.0", default-features = false }
pallet-preimage = { version = "45.0.0", default-features = false }
pallet-ranked-collective = { version = "45.0.0", default-features = false }
pallet-recovery = { version = "45.0.0", default-features = false }
pallet-referenda = { version = "45.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
pallet-treasury = { path = "pallets/treasury", default-features = false }
pallet-utility = { version = "45.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.7", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-block-builder = { version = "0.48.0", default-features = true }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.1", default-features = false }
sc-network-common = { version = "0.52.0", default-features = false }
sc-network-sync = { version = "0.54.0", default-features = false }
sc-network-types = { version = "0.20.1", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.1.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sc-utils = { version = "20.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-externalities = { version = "0.31.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-metadata-ir = { version = "0.12.1", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-panic-handler = { version = "13.0.2", default-features = true }
sp-runtime = { version = "45.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
sp-tracing = { version = "19.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-trie = { version = "42.0.1", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
sp-weights = { version = "33.2.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-test-utils = { version = "3.0.0", default-features = false }
substrate-wasm-builder = { version = "31.1.0", default-features = false }

[patch.crates-io]
libp2p-identity = { git = "https://github.com/Quantus-Network/qp-libp2p-identity", tag = "v0.2.11_patch_qp_rusty_crystals_dilithium_2_1" }
libp2p-noise = { git = "https://github.com/Quantus-Network/qp-libp2p-noise", tag = "v0.45.10" }
sc-cli = { path = "./client/cli" }
sc-network = { path = "client/network" }
sp-state-machine = { path = "./primitives/state-machine" }
sp-trie = { path = "./primitives/trie" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
